--- a/admin-dev/themes/default/scss/admin-theme/_admin-nav.sass
+++ b/admin-dev/themes/default/scss/admin-theme/_admin-nav.sass
@@ -64,7 +64,6 @@
 	ul.submenu
 		display: none
 	#nav-mobile-submenu
-		z-index: 1200
 		a:not(#nav-mobile-submenu-back)
 			font-size: 1.2em
 			padding-left: 50px
